fix: `ProductGallery` spacing

--- a/packages/core/src/components/sections/ProductGallery/section.module.scss
+++ b/packages/core/src/components/sections/ProductGallery/section.module.scss
@@ -2,6 +2,10 @@
 @import "@faststore/ui/src/styles/base/utilities.scss";
 
 .section {
+  @include media("<notebook") {
+    margin-top: 0;
+  }
+
   @import "@faststore/ui/src/components/atoms/Badge/styles.scss";
   @import "@faststore/ui/src/components/atoms/Button/styles.scss";
   @import "@faststore/ui/src/components/atoms/Checkbox/styles.scss";
