--- a/packages/core/src/components/sections/Section/section.scss
+++ b/packages/core/src/components/sections/Section/section.scss
@@ -12,5 +12,5 @@
   padding-top: var(--fs-spacing-5);
   border-top: var(--fs-border-width) solid var(--fs-border-color-light);
 
-  @include media(">=notebook") { padding-top: var(--fs-spacing-9); }
+  @include media(">=notebook") { padding-top: var(--fs-spacing-8); }
 }
